Added picture of a chef to idex.html and added alt attributes to cake.html, hot_dog.html and lasagna.html

--- a/recipes/hot_dog.html
+++ b/recipes/hot_dog.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Detroit-Style Coney Dogs</h1>
-    <img src="../images/Hot_Dog.webp">
+    <img src="../images/Hot_Dog.webp" alt="Hot Dog">
     <h3>Description</h3>
     <p>Where I come from no Tigers game is complete without a Detroit Coney. It's a grilled, natural-casing hot dog, loaded with chili sauce, mustard, and onions. Yummy...Detroit-style yummy!</p>
     <h3>Ingredients</h3>
