--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1><strong>Odin Recipes</strong></h1>
     <p>On this website you can find few recipes!</p>
-    <ul>
+    <img src="images/chef.png"c alt="Chef">
+      <ul>
       <li><a href="recipes/lasagna.html">Brenda's Lasagna Recipe</a></li>
       <li><a href="recipes/hot_dog.html">Detroit-Style Coney Dogs</a></li>
       <li><a href="recipes/cake.html">Kentucky Blue Ribbon All-Butter Pound Cake</a></li>
