--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Kentucky Blue Ribbon All-Butter Pound Cake</h1>
-    <img src="../images/Cake.webp">
+    <img src="../images/Cake.webp" alt="Cake">
     <h3>Description</h3>
     <p>This is the recipe my Grandmother would make every year during the holidays. I found the recipe tucked in her Bible when she passed, and it was written in her Grandmother's handwriting. It's been in my family for at least 7 generations, and in 2012, I won a Blue Ribbon at the Kentucky State fair by following her exact instructions. Tastes like pure love!</p>
     <h3>Ingredients</h3>
