--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Brenda's Lasagna Recipe</h1>
-    <img src="../images/Lasagna.webp">
+    <img src="../images/Lasagna.webp" alt="Lasagna">
     <h3>Description</h3>
     <p>This is a faster, and less expensive lasagna.</p>
     <h3>Ingredients</h3>
